lepinoid/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lepinoid-db
spec:
  type: ClusterIP
  selector:
    app: lepinoid-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
