lepinoid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lepinoid
spec:
  type: ClusterIP
  selector:
    app: lepinoid
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
